--- a/index.html
+++ b/index.html
@@ -718,12 +718,13 @@
       Reveal.initialize({
         hash: true,
         width: 1360,
+        height: '100%',
         dependencies: [
           { src: 'plugin/markdown/marked.js' },
           { src: 'plugin/markdown/markdown.js' },
           { src: 'plugin/notes/notes.js', async: true },
-          { src: 'plugin/highlight/highlight.js', async: true },
-        ],
+          { src: 'plugin/highlight/highlight.js', async: true }
+        ]
       });
     </script>
   </body>
