--- a/index.html
+++ b/index.html
@@ -275,8 +275,9 @@
               <tr>
                 <td>Субъекты оспаривания</td>
                 <td>
-                  руководитель временной администрации по управлению кредитной организацией кредитная организация в лице
-                  конкурсного управляющего
+                  руководитель временной администрации по управлению кредитной организацией,<br />
+                  кредитная организация в лице конкурсного управляющего,<br />
+                  кредитор или уполномоченный орган (при размере требований более 10% )
                 </td>
               </tr>
               <tr>
