--- a/index.html
+++ b/index.html
@@ -582,6 +582,9 @@
             <li>срок, в течение которого сделка совершена: 1 год до даты назначения временной администрации.</li>
             <li>неравноценное встречное исполнение</li>
           </ol>
+          <div class="center">
+            <img src="images/graph6.png" />
+          </div>
         </section>
         <section>
           <h2>Сделки по «дроблению вкладов».</h2>
@@ -616,6 +619,9 @@
             <li>срок, в течение которого сделка совершена: 1 год до даты назначения временной администрации.</li>
             <li>неравноценное встречное исполнение</li>
           </ol>
+          <div class="center">
+            <img src="images/graph7.png" />
+          </div>
         </section>
         <section>
           <h2>Гражданско-правовая ответственность контролирующих Банк лиц.</h2>
@@ -702,6 +708,20 @@
                 </li>
               </ul>
             </li>
+          </ol>
+        </section>
+        <section>
+          <h2>Банкротство ЗАО «Международный Промышленный Банк»</h2>
+          <div class="center">
+            <img src="images/pug.png" />
+          </div>
+          <ol>
+            <li>Определен размер субсидиарной ответственности до окончания расчетов с кредиторами.</li>
+            <li>
+              Привлечено к ответственности фактически контролирующее лицо (схема владения через многоуровневые
+              дискреционные трасты).
+            </li>
+            <li>Приведение в исполнение судебных актов в иностранных юрисдикциях.</li>
           </ol>
         </section>
       </div>
