--- a/index.html
+++ b/index.html
@@ -498,33 +498,35 @@
         <section>
           <h2>Выплаты «золотых парашютов».</h2>
 
-          <p><b>Основание оспаривания:</b> ст. 61.2 Закона о банкротстве</p>
-          <p><b>Порок сделки:</b> уменьшение размера имущества</p>
-          <p>
-            <b>Предмет доказывания:</b>
-          </p>
-          <ol>
-            <li>срок, в течение которого сделка совершена: 3 года до даты назначения временной администрации.</li>
-            <li>
-              цель причинения вреда имущественным правам кредиторов; опровержимые презумпции (считается доказанной при
-              наличии 2 следующих обстоятельств):
+          <div class="columns">
+            <div>
+              <p><b>Основание оспаривания:</b> ст. 61.2 Закона о банкротстве</p>
+              <p><b>Порок сделки:</b> уменьшение размера имущества</p>
+              <p>
+                <b>Предмет доказывания:</b>
+              </p>
               <ol>
-                <li>неплатежеспособность;</li>
-                <li>безвозмездная сделка или в отношении заинтересованного лица.</li>
-              </ol>
-            </li>
-            <li>причинение вреда.</li>
-            <li>
-              осведомленность о цели причинения вреда; опровержимые презумпции:
-              <ul>
+                <li>срок, в течение которого сделка совершена: 3 года до даты назначения временной администрации.</li>
                 <li>
-                  осведомленность об ущемлении интересов кредиторов или о признаках неплатежеспособности или
-                  недостаточности имущества
+                  цель причинения вреда имущественным правам кредиторов; опровержимые презумпции (считается доказанной
+                  при наличии 2 следующих обстоятельств):
+                  <ol>
+                    <li>неплатежеспособность;</li>
+                    <li>безвозмездная сделка или в отношении заинтересованного лица.</li>
+                  </ol>
                 </li>
-              </ul>
-            </li>
-          </ol>
-          <div class="center">
+                <li>причинение вреда.</li>
+                <li>
+                  осведомленность о цели причинения вреда; опровержимые презумпции:
+                  <ul>
+                    <li>
+                      осведомленность об ущемлении интересов кредиторов или о признаках неплатежеспособности или
+                      недостаточности имущества
+                    </li>
+                  </ul>
+                </li>
+              </ol>
+            </div>
             <img src="images/graph5.png" />
           </div>
         </section>
@@ -552,74 +554,82 @@
         <section>
           <h2>Сделки по рефинансированию задолженности.</h2>
 
-          <p>
-            <b>Структура сделки:</b>
-          </p>
-          <ul>
-            <li>
-              Банк выдает кредит 1 лицу с заключением обеспечительной сделки в отношении дорогостоящего имущества.
-            </li>
-            <li>
-              Через некоторое время Банк выдает другому лицу еще 1 кредит, лицо, как правило техническое, без
-              обеспечения.
-            </li>
-            <li>
-              Денежные средства по кредитному договору 2 лица цепочкой последовательных сделок перечисляются на счет
-              первого лица, который ими гасит кредит.
-            </li>
-            <li>
-              В результате сделок обязательство по кредитному договору прекращается надлежащим исполнением, Банк как
-              залогодержатель теряет право в отношении заложенного имущества.
-            </li>
-          </ul>
+          <div class="columns">
+            <div>
+              <p>
+                <b>Структура сделки:</b>
+              </p>
+              <ul>
+                <li>
+                  Банк выдает кредит 1 лицу с заключением обеспечительной сделки в отношении дорогостоящего имущества.
+                </li>
+                <li>
+                  Через некоторое время Банк выдает другому лицу еще 1 кредит, лицо, как правило техническое, без
+                  обеспечения.
+                </li>
+                <li>
+                  Денежные средства по кредитному договору 2 лица цепочкой последовательных сделок перечисляются на счет
+                  первого лица, который ими гасит кредит.
+                </li>
+                <li>
+                  В результате сделок обязательство по кредитному договору прекращается надлежащим исполнением, Банк как
+                  залогодержатель теряет право в отношении заложенного имущества.
+                </li>
+              </ul>
 
-          <p><b>Основание оспаривания:</b> ст. 61.2 Закона о банкротстве, ст.ст. 10, 168 ГК РФ, п. 2 ст. 174 ГК РФ</p>
-          <p><b>Порок сделки:</b> утрата возможности удовлетворить требования по обязательствам</p>
-          <p>
-            <b>Предмет доказывания:</b>
-          </p>
-          <ol>
-            <li>срок, в течение которого сделка совершена: 1 год до даты назначения временной администрации.</li>
-            <li>неравноценное встречное исполнение</li>
-          </ol>
-          <div class="center">
+              <p>
+                <b>Основание оспаривания:</b> ст. 61.2 Закона о банкротстве, ст.ст. 10, 168 ГК РФ, п. 2 ст. 174 ГК РФ
+              </p>
+              <p><b>Порок сделки:</b> утрата возможности удовлетворить требования по обязательствам</p>
+              <p>
+                <b>Предмет доказывания:</b>
+              </p>
+              <ol>
+                <li>срок, в течение которого сделка совершена: 1 год до даты назначения временной администрации.</li>
+                <li>неравноценное встречное исполнение</li>
+              </ol>
+            </div>
             <img src="images/graph6.png" />
           </div>
         </section>
         <section>
           <h2>Сделки по «дроблению вкладов».</h2>
 
-          <p>
-            <b>Структура сделки:</b>
-          </p>
-          <ul>
-            <li>
-              Банк выдает кредит 1 лицу с заключением обеспечительной сделки в отношении дорогостоящего имущества.
-            </li>
-            <li>
-              Через некоторое время Банк выдает другому лицу еще 1 кредит, лицо, как правило техническое, без
-              обеспечения.
-            </li>
-            <li>
-              Денежные средства по кредитному договору 2 лица цепочкой последовательных сделок перечисляются на счет
-              первого лица, который ими гасит кредит.
-            </li>
-            <li>
-              В результате сделок обязательство по кредитному договору прекращается надлежащим исполнением, Банк как
-              залогодержатель теряет право в отношении заложенного имущества.
-            </li>
-          </ul>
+          <div class="columns">
+            <div>
+              <p>
+                <b>Структура сделки:</b>
+              </p>
+              <ul>
+                <li>
+                  Банк выдает кредит 1 лицу с заключением обеспечительной сделки в отношении дорогостоящего имущества.
+                </li>
+                <li>
+                  Через некоторое время Банк выдает другому лицу еще 1 кредит, лицо, как правило техническое, без
+                  обеспечения.
+                </li>
+                <li>
+                  Денежные средства по кредитному договору 2 лица цепочкой последовательных сделок перечисляются на счет
+                  первого лица, который ими гасит кредит.
+                </li>
+                <li>
+                  В результате сделок обязательство по кредитному договору прекращается надлежащим исполнением, Банк как
+                  залогодержатель теряет право в отношении заложенного имущества.
+                </li>
+              </ul>
 
-          <p><b>Основание оспаривания:</b> ст. 61.2 Закона о банкротстве, ст.ст. 10, 168 ГК РФ, п. 2 ст. 174 ГК РФ</p>
-          <p><b>Порок сделки:</b> утрата возможности удовлетворить требования по обязательствам</p>
-          <p>
-            <b>Предмет доказывания:</b>
-          </p>
-          <ol>
-            <li>срок, в течение которого сделка совершена: 1 год до даты назначения временной администрации.</li>
-            <li>неравноценное встречное исполнение</li>
-          </ol>
-          <div class="center">
+              <p>
+                <b>Основание оспаривания:</b> ст. 61.2 Закона о банкротстве, ст.ст. 10, 168 ГК РФ, п. 2 ст. 174 ГК РФ
+              </p>
+              <p><b>Порок сделки:</b> утрата возможности удовлетворить требования по обязательствам</p>
+              <p>
+                <b>Предмет доказывания:</b>
+              </p>
+              <ol>
+                <li>срок, в течение которого сделка совершена: 1 год до даты назначения временной администрации.</li>
+                <li>неравноценное встречное исполнение</li>
+              </ol>
+            </div>
             <img src="images/graph7.png" />
           </div>
         </section>
@@ -675,6 +685,20 @@
           </ul>
         </section>
         <section>
+          <h2>Банкротство ЗАО «Международный Промышленный Банк»</h2>
+          <div class="center">
+            <img src="images/pug.png" />
+          </div>
+          <ol>
+            <li>Определен размер субсидиарной ответственности до окончания расчетов с кредиторами.</li>
+            <li>
+              Привлечено к ответственности фактически контролирующее лицо (схема владения через многоуровневые
+              дискреционные трасты).
+            </li>
+            <li>Приведение в исполнение судебных актов в иностранных юрисдикциях.</li>
+          </ol>
+        </section>
+        <section>
           <h2>Основания для отказа можно условно подразделить на две категории:</h2>
           <ol>
             <li>
@@ -708,20 +732,6 @@
                 </li>
               </ul>
             </li>
-          </ol>
-        </section>
-        <section>
-          <h2>Банкротство ЗАО «Международный Промышленный Банк»</h2>
-          <div class="center">
-            <img src="images/pug.png" />
-          </div>
-          <ol>
-            <li>Определен размер субсидиарной ответственности до окончания расчетов с кредиторами.</li>
-            <li>
-              Привлечено к ответственности фактически контролирующее лицо (схема владения через многоуровневые
-              дискреционные трасты).
-            </li>
-            <li>Приведение в исполнение судебных актов в иностранных юрисдикциях.</li>
           </ol>
         </section>
       </div>
