--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <h2>Статистические сведения.</h2>
           <p>
             По данным ЦБ РФ на 01.01.2010 зарегистрировано 1 178 кредитных организаций, на 01.01.2019 среди действующих
-            числится 484 кредитных организаций.
+            числится 484 кредитные организации.
           </p>
           <table>
             <thead>
@@ -54,23 +54,24 @@
               <tr>
                 <td>Добровольная ликвидация</td>
                 <td>
-                  - принятие решения участниками (учредителями) о ликвидации; - назначение ликвидационной комиссии по
-                  согласованию с ЦБ РФ; - решение ЦБ РФ об аннулировании лицензии на осуществление банковских операций
-                  (если нет оснований для отзыва);
+                  -&nbsp;принятие решения участниками (учредителями) о ликвидации;<br />
+                  -&nbsp;назначение ликвидационной комиссии по согласованию с ЦБ РФ;<br />
+                  -&nbsp;решение ЦБ РФ об аннулировании лицензии на осуществление банковских операций (если нет
+                  оснований для отзыва);
                 </td>
               </tr>
               <tr>
                 <td>Принудительная ликвидация</td>
                 <td>
-                  - ко дню отзыва лицензии отсутствуют признаки несостоятельности (банкротства); - арбитражный суд
-                  утверждает ликвидатора;
+                  - ко дню отзыва лицензии отсутствуют признаки несостоятельности (банкротства);<br />
+                  - арбитражный суд утверждает ликвидатора;
                 </td>
               </tr>
               <tr>
                 <td>Банкротство</td>
                 <td>
-                  - отзыв лицензии при наличии предусмотренных законом оснований; - признание кредитной организации
-                  банкротом и утверждение конкурсного управляющего.
+                  - отзыв лицензии при наличии предусмотренных законом оснований;<br />
+                  - признание кредитной организации банкротом и утверждение конкурсного управляющего.
                 </td>
               </tr>
             </tbody>
@@ -114,7 +115,7 @@
               <tr>
                 <td>
                   Право на обращение в суд с заявлением о признании должника банкротом (только после отзыва лицензии и
-                  при наличии решение суда для ряда заявителей)
+                  при наличии решения суда для ряда заявителей)
                 </td>
                 <td>
                   <ol>
@@ -135,7 +136,7 @@
                 </td>
               </tr>
               <tr>
-                <td>Процедуры применяемые в деле о банкротстве</td>
+                <td>Процедуры, применяемые в деле о банкротстве</td>
                 <td>
                   наблюдение, финансовое оздоровление, внешнее управление, мировое соглашение, конкурсное производство
                 </td>
@@ -157,11 +158,11 @@
           <ol>
             <li>Отзыв лицензии.</li>
             <li>Назначение временной администрации.</li>
-            <li>Направление в суд заявление о признании должника банкротом.</li>
+            <li>Направление в суд заявления о признании должника банкротом.</li>
             <li>Введение моратория на удовлетворение требований кредиторов кредитной организации.</li>
             <li>
-              Решения о признании банка несостоятельным (банкротом), введении процедуры конкурсного производства,
-              возложение функций конкурсного управляющего на Агентство.
+              Решение о признании банка несостоятельным (банкротом), введении процедуры конкурсного производства,
+              возложении функций конкурсного управляющего на Агентство.
             </li>
             <li>Созыв первого собрания кредиторов.</li>
           </ol>
@@ -180,8 +181,8 @@
               соответствующего кредитора:
               <ul>
                 <li>о включении его требования в реестр требований кредиторов,</li>
-                <li>об отказе в таком включении в указанный реестр,</li>
-                <li>о включении в этот реестр требования в неполном объеме.</li>
+                <li>об отказе в таком включении,</li>
+                <li>о включении требования в неполном объеме.</li>
               </ul>
             </li>
             <li>
@@ -193,8 +194,8 @@
               требования. По результатам рассмотрения уведомляет соответствующего кредитора:
               <ul>
                 <li>о включении его требования в реестр требований кредиторов,</li>
-                <li>об отказе в таком включении в указанный реестр,</li>
-                <li>о включении в этот реестр требования в неполном объеме.</li>
+                <li>об отказе в таком включении,</li>
+                <li>о включении требования в неполном объеме.</li>
               </ul>
             </li>
             <li>
@@ -281,7 +282,7 @@
                 </td>
               </tr>
               <tr>
-                <td>Презумпции выходы за пределы обычной хозяйственной дейятельности</td>
+                <td>Презумпции выхода за пределы обычной хозяйственной деятельности</td>
                 <td>(на раздаточном материале)</td>
               </tr>
             </tbody>
@@ -299,11 +300,11 @@
               банкротстве).
             </li>
             <li>
-              Сделки, повлекшие оказание предпочтения одному из кредитору перед другими (п.&nbsp;1&nbsp;ст.&nbsp;61.3
+              Сделки, повлекшие оказание предпочтения одному из кредиторов перед другими (п.&nbsp;1&nbsp;ст.&nbsp;61.3
               Закона о банкротстве).
             </li>
             <li>
-              Сделки, повлекшие оказание предпочтения одному из кредитору перед другими при осведомленности о
+              Сделки, повлекшие оказание предпочтения одному из кредиторов перед другими при осведомленности о
               неплатежеспособности (п.&nbsp;3&nbsp;ст.&nbsp;61.3 Закона о банкротстве).
             </li>
           </ol>
@@ -345,7 +346,7 @@
           <h2>Сделки с выборочным исполнением требований кредиторов банка.</h2>
 
           <p><b>Основание оспаривания:</b> п. 1 ст. 61.3 Закона о банкротстве</p>
-          <p><b>Порок сделки:</b> удовлетворение требований одного кредитора в льготном порядкее</p>
+          <p><b>Порок сделки:</b> удовлетворение требований одного кредитора в льготном порядке</p>
           <p>
             <b>Предмет доказывания:</b>
           </p>
@@ -445,7 +446,7 @@
             <li>Срок, в течение которого сделка совершена: 1 год до даты назначения временной администрации.</li>
             <li>
               Неравноценное встречное исполнение обязательств другой стороной сделки или на существенно в худшую сторону
-              отличающихся для кредитной организации условиях условиях.
+              отличающихся для кредитной организации условиях.
             </li>
           </ul>
         </section>
@@ -598,37 +599,21 @@
           <div class="columns">
             <div>
               <p>
-                <b>Структура сделки:</b>
+                <b>Структура сделок:</b>
               </p>
               <ul>
+                <li>Имеется остаток на счете юридического лица</li>
+                <li>Совершается операция по снятию денежных средств.</li>
                 <li>
-                  Банк выдает кредит 1 лицу с заключением обеспечительной сделки в отношении дорогостоящего имущества.
-                </li>
-                <li>
-                  Через некоторое время Банк выдает другому лицу еще 1 кредит, лицо, как правило техническое, без
-                  обеспечения.
-                </li>
-                <li>
-                  Денежные средства по кредитному договору 2 лица цепочкой последовательных сделок перечисляются на счет
-                  первого лица, который ими гасит кредит.
-                </li>
-                <li>
-                  В результате сделок обязательство по кредитному договору прекращается надлежащим исполнением, Банк как
-                  залогодержатель теряет право в отношении заложенного имущества.
+                  Затем во вклады подставных физических лиц вносится по 1,4 млн рублей, как правило в нарушение запрета
+                  ЦБ РФ на привлечение вкладов физических лиц.
                 </li>
               </ul>
 
               <p>
-                <b>Основание оспаривания:</b> ст. 61.2 Закона о банкротстве, ст.ст. 10, 168 ГК РФ, п. 2 ст. 174 ГК РФ
+                <b>Сделки оспариваются, как правило, Агентством, а не Банком.</b>
               </p>
-              <p><b>Порок сделки:</b> утрата возможности удовлетворить требования по обязательствам</p>
-              <p>
-                <b>Предмет доказывания:</b>
-              </p>
-              <ol>
-                <li>срок, в течение которого сделка совершена: 1 год до даты назначения временной администрации.</li>
-                <li>неравноценное встречное исполнение</li>
-              </ol>
+              <p><b>Основания недействительности:</b> ст. 170 ГК РФ, ст. 140, 834 ГК РФ</p>
             </div>
             <img src="images/graph7.png" />
           </div>
@@ -665,7 +650,7 @@
         <section>
           <h2>Соотношение субсидиарной ответственности и ответственности в форме возмещения убытков.</h2>
           <p>
-            Предмет доказывания по заявлению о привлечению к субсидиарной ответственности больше на 1 юридический факт:
+            Предмет доказывания по заявлению о привлечении к субсидиарной ответственности больше на 1 юридический факт:
             действия повлекли объективное банкротство должника (причинно-следственная связь между действиями и
             банкротством).
           </p>
@@ -751,8 +736,8 @@
           { src: 'plugin/markdown/marked.js' },
           { src: 'plugin/markdown/markdown.js' },
           { src: 'plugin/notes/notes.js', async: true },
-          { src: 'plugin/highlight/highlight.js', async: true }
-        ]
+          { src: 'plugin/highlight/highlight.js', async: true },
+        ],
       });
     </script>
   </body>
