--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
             <b>Структура сделки:</b>
           </p>
           <ul>
-            <li>заключается договор купля-продажа недвижимости;</li>
+            <li>заключается договор купли-продажи недвижимости;</li>
             <li>
               оплата производится реальными денежными средствами по цене, существенно ниже рыночной (процентов 50).
             </li>
