--- a/index.html
+++ b/index.html
@@ -732,12 +732,7 @@
         hash: true,
         width: 1360,
         height: '100%',
-        dependencies: [
-          { src: 'plugin/markdown/marked.js' },
-          { src: 'plugin/markdown/markdown.js' },
-          { src: 'plugin/notes/notes.js', async: true },
-          { src: 'plugin/highlight/highlight.js', async: true },
-        ],
+        dependencies: [],
       });
     </script>
   </body>
