--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       document.getElementsByTagName('head')[0].appendChild(link);
     </script>
   </head>
+
   <body>
     <div class="reveal">
       <div class="slides">
@@ -246,6 +247,17 @@
           </p>
         </section>
         <section>
+          <h2>Конкурсное оспаривание</h2>
+          <ol>
+            <li>сделки должника;</li>
+            <li>действия должника по исполнению обязательств во всех отраслях права;</li>
+            <li>
+              сделки не только должника, но и иных лиц за счет должника (заявление о зачете, платеж пристава денег
+              взыскателю, сделки дочерней компании по выводу активов, действия агентов).
+            </li>
+          </ol>
+        </section>
+        <section>
           <h2>Виды сомнительных сделок:</h2>
           <ol>
             <li>
@@ -261,29 +273,6 @@
               (сделки с предпочтением).
             </li>
           </ol>
-        </section>
-        <section>
-          <h2>Особенности, установленные ст.&nbsp;189.40 Закона о банкротстве.</h2>
-          <table>
-            <tbody>
-              <tr>
-                <td>Дата, с которой исчисляются сроки на оспаривание сделок</td>
-                <td>дата назначения Банком России временной администрации по управлению кредитной организацией</td>
-              </tr>
-              <tr>
-                <td>Субъекты оспаривания</td>
-                <td>
-                  руководитель временной администрации по управлению кредитной организацией,<br />
-                  кредитная организация в лице конкурсного управляющего,<br />
-                  кредитор или уполномоченный орган (при размере требований более 10% )
-                </td>
-              </tr>
-              <tr>
-                <td>Презумпции выхода за пределы обычной хозяйственной деятельности</td>
-                <td>(на раздаточном материале)</td>
-              </tr>
-            </tbody>
-          </table>
         </section>
         <section>
           <h2>Специальные основания оспаривания сомнительных сделок, предусмотренные Законом о банкротстве.</h2>
@@ -306,6 +295,84 @@
             </li>
           </ol>
         </section>
+
+        <section>
+          <h2>Соотношение составов</h2>
+
+          <ol>
+            <li style="margin-bottom: 25px;">
+              Сделки с целью причинения вреда (п. 2 ст. 61.2 Закона о банкротстве):
+              <ul style="margin-bottom: 5px;">
+                <li><b>цель</b> причинения вреда (субъективный элемент);</li>
+                <li><b>вред;</b></li>
+                <li><b>знание</b> о цели причинения вреда (субъективный элемент).</li>
+              </ul>
+              Срок – 3 года
+            </li>
+            <li style="margin-bottom: 25px;">
+              Сделки с неравноценностью (п. 1 ст. 61.2 Закона о банкротстве):
+              <ul style="margin-bottom: 5px;">
+                <li><b>вред</b> – неравноценное встречное исполнение;</li>
+                <li><b>цель</b> и знание неопровержимо презюмируются.</li>
+              </ul>
+              Срок – 1 год
+            </li>
+            <li style="margin-bottom: 25px;">
+              Сделки с предпочтением (ст. 61.3 Закона о банкротстве):
+              <ul style="margin-bottom: 5px;">
+                <li><b>вред</b> – преимущественное удовлетворение требований 1 кредитора;</li>
+                <li><b>цель</b> и знание неопровержимо презюмируются.</li>
+              </ul>
+              Срок – до 1 месяца (только вред) и от 1 до 6 (вред и недобросовестность)
+            </li>
+          </ol>
+        </section>
+
+        <section>
+          <h2>Сделки с предпочтением</h2>
+
+          <p>
+            Предпочтение (преимущественное удовлетворение) состоит в постановке одного кредитора в лучшее положение при
+            банкротстве, чем если бы сделки не было, за счет постановки других кредиторов в худшее положение, чем если
+            бы сделки не было.
+          </p>
+          <p>Примеры предпочтения:</p>
+          <ol>
+            <li>
+              сделка направлена на обеспечение исполнения ранее возникшего обязательству (недобросовестность
+              неопровержимо презюмируется);
+            </li>
+            <li>
+              сделка направлена на обеспечение исполнения обязательства третьего лица (недобросовестность неопровержимо
+              презюмируется);
+            </li>
+            <li>сделка изменила очередность требований (недобросовестность неопровержимо презюмируется);</li>
+            <li>
+              сделка привела к удовлетворению требований, срок которых не наступил, при наличии просроченных требований
+              иных кредиторов;
+            </li>
+            <li>
+              сделка привела к оказанию большего предпочтения, чем было бы оказано в порядке, предусмотренном Законом о
+              банкротстве.
+            </li>
+          </ol>
+        </section>
+
+        <section>
+          <h2>Неравноценное встречное исполнение</h2>
+
+          <p>
+            Неравноценное встречное исполнение – цена сделки или иные ее условия существенно в худшую сторону для
+            должника отличаются от сделок, совершаемых при сходных обстоятельствах:
+          </p>
+
+          <ol>
+            <li>должник отдает больше, чем получает;</li>
+            <li>не только цена, но и другие условия (рассрочки, отсрочки платежей)</li>
+            <li>продажа лицу, который заведомо не сможет за вещь заплатить.</li>
+          </ol>
+        </section>
+
         <section>
           <h2>Особенности применения п.1 ст.61.2 Закона о банкротстве.</h2>
           <div class="center">
@@ -339,6 +406,42 @@
             <li>сделки по «дроблению» вкладов.</li>
           </ol>
         </section>
+
+        <section>
+          <h2>Обычная хозяйственная деятельность</h2>
+          <ol>
+            <li>субъективная обычность;</li>
+            <li>объективная обычность.</li>
+          </ol>
+
+          <p>Возражения об обычности - защита от иска об оспаривании.</p>
+          <p>Обычность ограничена суммой сделки - 1 % балансовой стоимости активов.</p>
+        </section>
+
+        <section>
+          <h2>Особенности, установленные ст.&nbsp;189.40 Закона о банкротстве.</h2>
+          <table>
+            <tbody>
+              <tr>
+                <td>Дата, с которой исчисляются сроки на оспаривание сделок</td>
+                <td>дата назначения Банком России временной администрации по управлению кредитной организацией</td>
+              </tr>
+              <tr>
+                <td>Субъекты оспаривания</td>
+                <td>
+                  руководитель временной администрации по управлению кредитной организацией,<br />
+                  кредитная организация в лице конкурсного управляющего,<br />
+                  кредитор или уполномоченный орган (при размере требований более 10% )
+                </td>
+              </tr>
+              <tr>
+                <td>Презумпции выхода за пределы обычной хозяйственной деятельности</td>
+                <td>(на раздаточном материале)</td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
+
         <section>
           <h2>Сделки с выборочным исполнением требований кредиторов банка.</h2>
 
