--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <section>
           <h2>Статистические сведения.</h2>
           <p>
-            По данным ЦБ РФ на 01.01.2010 зарегистрировано 1 178 кредитных организаций, на 01.01.2019 среди действующих
-            числится 484 кредитные организации.
+            По данным ЦБ РФ на 01.01.2010 зарегистрировано 1 178 кредитных организаций, на 17.03.2020 среди действующих
+            числится 396 кредитных организаций.
           </p>
           <table>
             <thead>
