--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <section>
           <h2>Статистические сведения.</h2>
           <p>
-            По данным ЦБ РФ на 01.01.2010 зарегистрировано 1 178 кредитных организаций, на 17.03.2020 среди действующих
-            числится 396 кредитных организаций.
+            По данным ЦБ РФ на 01.01.2010 зарегистрировано 1 178 кредитных организаций, на 29.09.2020 среди действующих
+            числится 378 кредитных организаций.
           </p>
           <table>
             <thead>
@@ -300,26 +300,26 @@
           <h2>Соотношение составов</h2>
 
           <ol>
-            <li style="margin-bottom: 25px;">
+            <li style="margin-bottom: 25px">
               Сделки с целью причинения вреда (п. 2 ст. 61.2 Закона о банкротстве):
-              <ul style="margin-bottom: 5px;">
+              <ul style="margin-bottom: 5px">
                 <li><b>цель</b> причинения вреда (субъективный элемент);</li>
                 <li><b>вред;</b></li>
                 <li><b>знание</b> о цели причинения вреда (субъективный элемент).</li>
               </ul>
               Срок – 3 года
             </li>
-            <li style="margin-bottom: 25px;">
+            <li style="margin-bottom: 25px">
               Сделки с неравноценностью (п. 1 ст. 61.2 Закона о банкротстве):
-              <ul style="margin-bottom: 5px;">
+              <ul style="margin-bottom: 5px">
                 <li><b>вред</b> – неравноценное встречное исполнение;</li>
                 <li><b>цель</b> и знание неопровержимо презюмируются.</li>
               </ul>
               Срок – 1 год
             </li>
-            <li style="margin-bottom: 25px;">
+            <li style="margin-bottom: 25px">
               Сделки с предпочтением (ст. 61.3 Закона о банкротстве):
-              <ul style="margin-bottom: 5px;">
+              <ul style="margin-bottom: 5px">
                 <li><b>вред</b> – преимущественное удовлетворение требований 1 кредитора;</li>
                 <li><b>цель</b> и знание неопровержимо презюмируются.</li>
               </ul>
